# ForensicAnalysisToolModule

./: README.md  pyproject.toml  setup.py
cpp/: bindings.cpp
examples/: example.py
forensic_weapon_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
inference/: __init__.py  inference.py  requirements.txt
